style.css
body {
    font-family: "Roboto", Arial, sans-serif;
    font-size: 16px;
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 12px;
}

p {
    padding: 0;
    margin: 0;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 32px;
    padding: 0px;
    margin: 0px;
}

.header {
    display: flex;
    flex-direction: column;
    color: white;
    background-color: #1f2937;
    padding: 12px 200px 100px 200px;
}

.headlink {
    text-decoration: none;
}

.headlink:hover {
    text-decoration: underline;
}

.headlink:visited {
    color: skyblue;
}

.logo {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 32px;
}

.main-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 32px;
}

.image {
    width: 420px;
    height: 220px;
    flex-shrink: 0;
    background-color: gray;
    display: flex;
    align-items: center;
    justify-content: center;
}

.info {
    flex-grow: 0;
    width: 420px;
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.title {
    font-size: 48px;
    font-weight: 900;
}

.sub {
    color: #dadee0;
}

.signup {
    color: #fff;
    background-color: #3882f6;
    font-size: 14px;
    font-weight: 600;
    flex-grow: 0;
    width: 100px;
    padding: 8px;
    border-radius: 8px;
    border: none;
}

.signup:hover {
    background-color: #5083d4;
}

.body {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 86px;
}

.icons {
    display: flex;
    flex-wrap: wrap;
    gap: 24px;
    margin: 24px;
}

.icon-image {
    flex-shrink: 0;
    width: 120px;
    height: 120px;
    border: 2px solid #3882f6;
    border-radius: 12px;
}

.icon-text {
    color: #949494;
    font-size: 12px;
    width: 120px;
    text-align: center;
    padding: 6px;
}

.quote-container {
    background-color: #e5e7eb;
    color: #242424;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 16px;
    padding: 64px 240px;
}

.signup-container {
    background-color: #3882f6;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 64px 240px 64px 12px;
    padding: 24px 86px;
    border-radius: 12px;
}

.signup-text {
    color: white;
}

.footer {
    color: #fff;
    background-color: #1f2937;
    padding: 48px;
    display: flex;
    justify-content: center;
    align-items: center;
}

#quote {
    font-style: italic;
    font-size: 32px;
}

#author {
    font-weight: lighter;
    align-self: flex-end;
    font-weight: 900;
    font-size: 20px;
}

#logotext {
    font-weight: 900;
}

#lower {
    border: 2px solid white;
}

#signup-title {
    font-weight: 900;
    font-size: 24px;
}

@media screen and (max-width: 800px) {
    
    body {
        width: 100%;
    }
    
    .header {
        padding: 20px;
    }
    
    .main-container {
        display: flex;
        flex-direction: column;
    }

    .body {
        margin-bottom: 0px;
    }

    .quote-container {
        padding: 12px;
    }

    .signup-container {
        padding: 24px 12px;
        margin: 12px;
        gap: 12px;
    }

    .footer {
        font-size: 12px;
        padding: 8px;
    }

    #quote {
        font-size: 20px;
    }

    #author {
        font-size: 16px;
    }
}

